# asciiquarium-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  USAGE.md
.github/workflows/: ci.yml
examples/: egui_demo.rs
src/: lib.rs
src/widgets/: asciiquarium.rs  asciiquarium_assets.rs  generated_fish_assets.rs  mod.rs
